[project]
name = "duplicate-detector"
version = "1.1.0"
description = "Duplicate image detection using metadata and neural network features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pillow",
    "pillow-heif",
    "psutil",
    "scikit-learn",
    "opencv-python",
    "rich",
    "humanize",
    "exifread",
    "flask",
    "waitress",
]

[dependency-groups]
dev = ["ruff", "pyright"]

[tool.uv]
default-groups = ["dev"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
    "PIE",    # flake8-pie
    "PERF",   # perflint
    "PGH",    # pygrep-hooks
    "PLE",    # pylint errors
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (mp.set_start_method must run first)
    "PERF203", # try-except in loop (sometimes unavoidable)
]
