[project]
name = "duplicate-detector"
version = "1.1.0"
description = "Duplicate image detection using metadata and neural network features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pillow",
    "pillow-heif",
    "psutil",
    "scikit-learn",
    "opencv-python",
    "rich",
    "humanize",
    "exifread",
    "flask",
    "waitress",
]

[dependency-groups]
dev = ["ruff", "pyright"]

[tool.uv]
default-groups = ["dev"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false  # pillow_heif, sklearn have no official stubs

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (mp.set_start_method must run first)
    "T201",   # print statements (intentional - CLI tool)
    "S311",   # pseudo-random for rate limiting (not crypto)
    "ERA001", # false positive on section comments
    "D203",   # conflicts with D211 (no-blank-line-before-class)
    "D213",   # conflicts with D212 (multi-line-summary-first-line)
    "COM812", # conflicts with ruff formatter
    "N812",   # F and T are standard PyTorch conventions
    "PLC0415", # argparse import in main() is intentional for lazy loading
    "S104",   # 0.0.0.0 binding is intentional for local network access
]
